# XRW-VQE

./: .gitignore  CMakeLists.txt  review.md  sim_head.cpp
src/apps/CLI/: main_cli.cpp
src/apps/GUI/: gui.cpp  gui.hpp
src/core/: adapt_sim.cpp  adapt_sim.hpp  ansatz.cpp  ansatz.hpp  opt.cpp  opt.hpp  physics.cpp  simulation.cpp  simulation.hpp  vqe_context.cpp  vqe_context.hpp
src/scripts/: generate_1rdm.py  generate_pool.py
